-Fixed issue in import code to better import trades using single row (such as rows with Entry/Exit price columns) or double row (for brokers that format their spreadsheet with a buy and sell row) -Fixed charts z-index in analytics page so charts are not above the navigation bar.

--- a/styles/analytics.css
+++ b/styles/analytics.css
@@ -76,7 +76,6 @@
     position: relative;
     width: 100%;
     height: calc(100% - 40px);
-    z-index: 1000;
 }
 
 .stats-card {
